# cosmic-ext-classic-menu

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  cargo-sources.json  cosmic-classic-menu.spec  justfile
.devcontainer/: devcontainer.json
.devcontainer/flatpak/: devcontainer-feature.json  install.sh
.github/workflows/: rust.yml
applet/: Cargo.toml
applet/i18n/ar/: cosmic_classic_menu.ftl
applet/i18n/de/: cosmic_classic_menu.ftl
applet/i18n/en/: cosmic_ext_classic_menu_applet.ftl
applet/i18n/es-419/: cosmic_ext_classic_menu.ftl
applet/i18n/hi/: cosmic_classic_menu.ftl
applet/i18n/hu/: cosmic_ext_classic_menu.ftl
applet/i18n/kn/: cosmic_classic_menu.ftl
applet/i18n/sk/: cosmic_ext_classic_menu_applet.ftl
applet/i18n/sr-Latn/: cosmic_ext_classic_menu.ftl
applet/i18n/uk/: cosmic_ext_classic_menu_applet.ftl
applet/src/: applet.rs  applet_button.rs  applet_menu.rs  config.rs  cosmic_session.rs  i18n.rs  lib.rs  main.rs  session_manager.rs
applet/src/logic/: apps.rs
applet/src/model/: application_entry.rs  mod.rs
data/: com.championpeak87.cosmic-classic-menu.desktop  com.championpeak87.cosmic-classic-menu.xml
flatpak/: cargo-sources.json  cargo.json  com.championpeak87.cosmic-ext-classic-menu.json  cosmic-classic-menu.json
i18n/ar/: cosmic_classic_menu.ftl
i18n/cs/: cosmic_classic_menu.ftl
i18n/de/: cosmic_classic_menu.ftl
i18n/es-419/: cosmic_classic_menu.ftl
i18n/fa/: cosmic_classic_menu.ftl
i18n/fr/: cosmic_classic_menu.ftl
i18n/hi/: cosmic_classic_menu.ftl
i18n/hu/: cosmic_classic_menu.ftl
i18n/it/: cosmic_classic_menu.ftl
i18n/ja/: cosmic_classic_menu.ftl
i18n/kn/: cosmic_classic_menu.ftl
i18n/ko/: cosmic_classic_menu.ftl
i18n/pl/: cosmic_classic_menu.ftl
i18n/pt/: cosmic_classic_menu.ftl
i18n/pt-BR/: cosmic_classic_menu.ftl
i18n/ru/: cosmic_classic_menu.ftl
i18n/sk/: cosmic_classic_menu.ftl
i18n/sr-Cyrl/: cosmic_classic_menu.ftl
i18n/sr-Latn/: cosmic_classic_menu.ftl
i18n/sv/: cosmic_classic_menu.ftl
i18n/tr/: cosmic_classic_menu.ftl
i18n/uk/: cosmic_classic_menu.ftl
i18n/zh-CN/: cosmic_classic_menu.ftl
i18n/zh-TW/: cosmic_classic_menu.ftl
res/: com.championpeak87.CosmicClassicMenu.desktop  com.championpeak87.CosmicClassicMenu.metainfo.xml  com.championpeak87.cosmic-classic-menu.desktop  com.championpeak87.cosmic-classic-menu.metainfo.xml  com.championpeak87.cosmic-ext-classic-menu.desktop  com.championpeak87.cosmic-ext-classic-menu.metainfo.xml  packaging.just
rpm/: cosmic-classic-menu.spec  cosmic-ext-classic-menu.spec
settings/: Cargo.toml  build.rs
settings/i18n/ar/: cosmic_classic_menu_settings.ftl  cosmic_ext_classic_menu_settings.ftl
settings/i18n/cs/: cosmic_classic_menu_settings.ftl  cosmic_ext_classic_menu_settings.ftl
settings/i18n/de/: cosmic_classic_menu_settings.ftl  cosmic_ext_classic_menu_settings.ftl
settings/i18n/en/: cosmic_classic_menu_settings.ftl  cosmic_ext_classic_menu_settings.ftl
settings/i18n/es/: cosmic_classic_menu_settings.ftl  cosmic_ext_classic_menu_settings.ftl
settings/i18n/es-419/: cosmic_classic_menu_settings.ftl  cosmic_ext_classic_menu_settings.ftl
settings/i18n/fa/: cosmic_classic_menu_settings.ftl  cosmic_ext_classic_menu_settings.ftl
settings/i18n/fr/: cosmic_classic_menu_settings.ftl  cosmic_ext_classic_menu_settings.ftl
settings/i18n/hi/: cosmic_classic_menu_settings.ftl  cosmic_ext_classic_menu_settings.ftl
settings/i18n/hu/: cosmic_classic_menu_settings.ftl  cosmic_ext_classic_menu_settings.ftl
settings/i18n/it/: cosmic_classic_menu_settings.ftl  cosmic_ext_classic_menu_settings.ftl
settings/i18n/ja/: cosmic_classic_menu_settings.ftl  cosmic_ext_classic_menu_settings.ftl
settings/i18n/kn/: cosmic_classic_menu_settings.ftl  cosmic_ext_classic_menu_settings.ftl
settings/i18n/ko/: cosmic_classic_menu_settings.ftl  cosmic_ext_classic_menu_settings.ftl
settings/i18n/pl/: cosmic_classic_menu_settings.ftl  cosmic_ext_classic_menu_settings.ftl
settings/i18n/pt/: cosmic_classic_menu_settings.ftl  cosmic_ext_classic_menu_settings.ftl
settings/i18n/pt-BR/: cosmic_classic_menu_settings.ftl  cosmic_ext_classic_menu_settings.ftl
settings/i18n/ru/: cosmic_classic_menu_settings.ftl  cosmic_ext_classic_menu_settings.ftl
settings/i18n/sk/: cosmic_classic_menu_settings.ftl  cosmic_ext_classic_menu_settings.ftl
settings/i18n/sr-Cyrl/: cosmic_classic_menu_settings.ftl  cosmic_ext_classic_menu_settings.ftl
settings/i18n/sr-Latn/: cosmic_classic_menu_settings.ftl  cosmic_ext_classic_menu_settings.ftl
settings/i18n/sv/: cosmic_classic_menu_settings.ftl  cosmic_ext_classic_menu_settings.ftl
settings/i18n/tr/: cosmic_classic_menu_settings.ftl  cosmic_ext_classic_menu_settings.ftl
settings/i18n/uk/: cosmic_classic_menu_settings.ftl  cosmic_ext_classic_menu_settings.ftl
settings/i18n/zh-CN/: cosmic_classic_menu_settings.ftl  cosmic_ext_classic_menu_settings.ftl
settings/i18n/zh-TW/: cosmic_classic_menu_settings.ftl  cosmic_ext_classic_menu_settings.ftl
settings/src/: app.rs  i18n.rs  main.rs
src/: applet.rs  applet_button.rs  applet_menu.rs  config.rs  launcher.rs  localize.rs  logic.rs  main.rs  power_options.rs  spawn_detached.rs  window.rs
src/logic/: apps.rs
src/model/: application_entry.rs
