[package]
name = "cosmic-classic-menu"
version = "0.0.1"
edition = "2021"
authors = ["Kamil Lihan <k.lihan@outlook.com>"]
license = "GPL-3.0-only"
description = "A launcher applet for COSMIC Desktop"

[dependencies]

i18n-embed-fl = "0.9.1"
open = "5.3.0"
rust-embed = "8.5.0"
fuzzy-matcher = "0.3.7"
zbus = "5.3.1"
tokio = "1.31"
freedesktop-desktop-entry = "0.7.7"
current_locale = "0.1.1"
serde = "1.0.210"
rustix = "0.38.44"
logind-zbus = "5.1.0"


[dependencies.i18n-embed]
version = "0.15"
features = ["fluent-system", "desktop-requester"]

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
default-features = false
features = ["applet", "tokio", "wayland", "desktop"]

# # Uncomment to test a locally-cloned libcosmic
# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../libcosmic" }

[package.metadata.deb]
license-file = "LICENSE"
assets = [
    ["target/release/cosmic-classic-menu", "usr/bin/", "755"],
    ["res/com.championpeak87.CosmicClassicMenu.desktop", "usr/share/applications/", "644"],
    ["res/com.championpeak87.CosmicClassicMenu.metainfo.xml", "usr/share/metainfo/", "644"],
    ["res/icons/hicolor/scalable/apps/com.championpeak87.CosmicClassicMenu.svg", "usr/share/icons/hicolor/", "644"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/cosmic-classic-menu", dest = "/usr/bin/", mode = "755" },
    { source = "LICENSE", dest = "/usr/share/doc/cosmic-classic-menu/LICENSE", doc = true, mode = "644" },
    { source = "res/*.desktop", dest = "/usr/share/applications/", mode = "644" },
    { source = "res/icons/hicolor/scalable/apps/com.championpeak87.CosmicClassicMenu.svg", dest = "/usr/share/icons/scalable/apps/", mode = "644"},
]
