[package]
name = "cosmic-classic-menu"
version = "0.0.2"
edition = "2021"
authors = ["Kamil Lihan <k.lihan@outlook.com>"]
license = "GPL-3.0-only"
description = "A launcher applet for COSMIC Desktop"

[dependencies]
i18n-embed-fl = "0.8"
open = "5.1.3"
rust-embed = "8.3.0"
fuzzy-matcher = "0.3.7"
zbus = "5.7.1"
tokio = { version = "1.31", features = ["full"] }
freedesktop-desktop-entry = "0.7.13"
current_locale = "0.1.1"
serde = "1.0.210"
rustix = "1.0.5"
logind-zbus = "5.3.2"
once_cell = "1.21.3"
users = "0.11.0"
accounts-zbus = { git = "https://github.com/pop-os/dbus-settings-bindings" }
cached = "0.55.1"
notify = "*"

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
default-features = false
features = ["applet", "tokio", "wayland", "desktop"]

[dependencies.i18n-embed]
version = "0.14"
features = ["fluent-system", "desktop-requester"]

# Uncomment to test a locally-cloned libcosmic
# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../libcosmic" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }
# cosmic-theme = { path = "../libcosmic/cosmic-theme" }


[package.metadata.deb]
license-file = "LICENSE"
assets = [
    ["target/release/cosmic-classic-menu", "usr/bin/", "755"],
    ["res/com.championpeak87.cosmic-classic-menu.desktop", "usr/share/applications/", "644"],
    ["res/com.championpeak87.cosmic-classic-menu.metainfo.xml", "usr/share/metainfo/", "644"],
    ["res/icons/com.championpeak87.cosmic-classic-menu.svg", "usr/share/icons/hicolor/scalable/apps", "644"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/cosmic-classic-menu", dest = "/usr/bin/", mode = "755" },
    { source = "LICENSE", dest = "/usr/share/doc/cosmic-classic-menu/LICENSE", doc = true, mode = "644" },
    { source = "res/*.desktop", dest = "/usr/share/applications/", mode = "644" },
    { source = "res/icons/com.championpeak87.cosmic-classic-menu.svg", dest = "/usr/share/icons/scalable/apps/", mode = "644"},
]