[package]
name = "cosmic-ext-classic-menu-applet"
version = "0.0.7"
edition = "2021"
authors = ["Kamil Lihan <k.lihan@outlook.com>"]
license = "GPL-3.0-only"
description = "A launcher applet for COSMIC™ Desktop"
repository = "https://github.com/championpeak87/cosmic-ext-classic-menu"

[dependencies]
i18n-embed-fl = "0.8"
open = "5.1.3"
rust-embed = "8.3.0"
fuzzy-matcher = "0.3.7"
zbus = "5.7.1"
tokio = { version = "1.31", features = ["full"] }
freedesktop-desktop-entry = "0.7.13"
serde = "1.0.210"
rustix = "1.0.5"
logind-zbus = "5.3.2"
once_cell = "1.21.3"
users = "0.11.0"
accounts-zbus = { git = "https://github.com/pop-os/dbus-settings-bindings" }
notify = "*"
which = "8.0.0"
simple_logger = "5.1.0"
log = "0.4.28"

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
default-features = false
features = ["applet", "tokio", "wayland", "desktop"]

[dependencies.i18n-embed]
version = "0.14"
features = ["fluent-system", "desktop-requester"]

# Uncomment to test a locally-cloned libcosmic
# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../libcosmic" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }
# cosmic-theme = { path = "../libcosmic/cosmic-theme" }
