[package]
name = "cosmic-classic-menu-settings"
version = "0.0.4"
edition = "2021"
authors = ["Kamil Lihan <k.lihan@outlook.com>"]
license = "GPL-3.0-only"
description = "A launcher applet for COSMIC Desktop"
repository = "https://github.com/championpeak87/cosmic-classic-menu"

[build-dependencies]
vergen = { version = "8", features = ["git", "gitcl"] }
walkdir = "2.3.2"

[dependencies]
futures-util = "0.3.31"
i18n-embed-fl = "0.9.2"
open = "5.3.0"
rust-embed = "8.5.0"
tokio = { version = "1.41.0", features = ["full"] }
cosmic-classic-menu = { path = "../applet" }

[dependencies.i18n-embed]
version = "0.15"
features = ["fluent-system", "desktop-requester"]

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
features = [
    # Accessibility support
    "a11y",
    # Uses cosmic-settings-daemon to watch for config file changes
    "dbus-config",
    # Support creating additional application windows.
    "multi-window",
    # On app startup, focuses an existing instance if the app is already open
    "single-instance",
    # Uses tokio as the executor for the runtime
    "tokio",
    # Windowing support for X11, Windows, Mac, & Redox
    "winit",
    # Add Wayland support to winit
    "wayland",
    # GPU-accelerated rendering
    "wgpu",
]

# Uncomment to test a locally-cloned libcosmic
# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../libcosmic" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }
# cosmic-theme = { path = "../libcosmic/cosmic-theme" }
